Fix for Subheadline Wordwrap

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -99,6 +99,8 @@ h3 {
   font-family: "Neue Plak Text Light";
   text-transform: none;
   font-weight: normal;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 .subheadline h2 strong {
   font-family: "Neue Plak Text";
